--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "google-api-core>=2.24.2",
     "google-genai>=1.15.0",
+    "pillow>=11.2.1",
     "python-frontmatter>=1.1.0",
     "tqdm>=4.67.1",
 ]
